@@ -16,3 +16,4 @@ mkdir ./build
 cd ./build 
 cmake .. -DENV="DEVELOPMENT" -DSHARED="$rootpath/src/hooks/kambria-pre-push" -DVER="0.0.0"
 make
+make install
